# AI_solo_coder_task_B_121

./: .env  README.md  check_output.txt  docker-compose.yml  package.json  test_final.txt  test_refactor.txt
backend/: .env  Cargo.toml  Dockerfile  errors.txt
backend/src/: aerodynamic_model.rs  alarm_mqtt.rs  code_compliance.rs  dtu_receiver.rs  flutter_analyzer.rs  genetic_optimizer.rs  handlers.rs  influxdb_storage.rs  main.rs  material_damper.rs  material_model.rs  metrics.rs  models.rs  mqtt_alerts.rs  shape_optimizer.rs  virtual_crossing.rs  vr_bridge_experience.rs  wind_cable_evaluator.rs  wind_resistant.rs
config/: aero_params.json  ga_params.json
frontend/: app.js  cable_bridge_3d.js  code_checker_panel.js  feature_panels.js  flutter_panel.js  index.html  material_panel.js  style.css  vr_experience_panel.js  wind_cable_panel.js
scripts/: Dockerfile.simulator  influxdb.conf  init_influxdb.iql  mosquitto.conf  nginx.conf  prometheus.yml  sensor_simulator.py
