[package]
name = "bridge_monitoring_backend"
version = "1.0.0"
edition = "2021"
description = "Ancient Suspension Bridge Wind-Induced Vibration Monitoring & Aerodynamic Optimization System"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# InfluxDB
influxdb = { version = "0.7", features = ["derive"] }

# MQTT
rumqttc = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# Math / Statistics
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"
nalgebra = "0.32"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = { version = "0.14", features = ["yaml"] }
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Static initialization
lazy_static = "1.4"

# Metrics
prometheus = { version = "0.13", default-features = false, features = ["process"] }

# Static file serving
actix-files = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
